[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/node_type_popup.gd" id="1"]

[node name="NodeTypePopup" type="PanelContainer"]
layout_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -160.0
offset_right = 180.0
offset_bottom = 160.0
visible = false
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
horizontal_alignment = 1
text = "SELECT NODE TYPE"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.0, 1.0, 0.835, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TypeList" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="CloseButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 28)
text = "CANCEL"
